--- a/opm/templates/changeuserofdevice/changeUserOfDevice.html
+++ b/opm/templates/changeuserofdevice/changeUserOfDevice.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
+    <title> OPMS - Change User of Device </title>
         <div class="col s12 white"><div class="col s12 m12 l12 center white">
             <div class="section"></div>
 
