--- a/opm/templates/createusers/createUser.html
+++ b/opm/templates/createusers/createUser.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
+    <title> OPMS - Create User </title>
         <!------------------------------------------------------- BODY STARTS HERE ------------------------------------------------------------->
 
         <div class="col s12 m12 l12 center white">
