--- a/opm/templates/home/adminBody.html
+++ b/opm/templates/home/adminBody.html
@@ -2,7 +2,9 @@
 {% load staticfiles%}
 
 {% block content %}
+<title> OPMS </title>
     <div class="row white">
+
 
                 <div class="col s12 m12 l12 center">
 
