--- a/opm/templates/listofusers/listOfUsers.html
+++ b/opm/templates/listofusers/listOfUsers.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
+    <title> OPMS - View List of Users </title>
         <!------------------------------------------------------- BODY STARTS HERE ------------------------------------------------------------->
         <div class="col s12 m12 l12 center white">
             <div class="row">        
