--- a/opm/templates/login/index.html
+++ b/opm/templates/login/index.html
@@ -12,7 +12,8 @@
 
 </head>
 
-    <title> hi penge site name </title>
+    <title> OPMS - Log In </title>
+    <link rel="icon" href="{% static 'img/Logo_Colored.png' %}">
 <body>
   <div class="section"></div>
   <div class="section"></div>
