--- a/opm/static/css/HOMEPAGE.css
+++ b/opm/static/css/HOMEPAGE.css
@@ -9,7 +9,7 @@
     }
 
     body {
-      background: linear-gradient(to top left, #b2dfdb 0%, #fff   100%);
+      background: linear-gradient(to top right, #53a49c 0%, #cfe7e7   100%);
     }
 
     #container {
