--- a/opm/templates/filloutmedicalform/medicalForm.html
+++ b/opm/templates/filloutmedicalform/medicalForm.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
+        <title> OPMS - Fill Out Medical Form </title>
         <!------------------------------------------------------- BODY STARTS HERE ------------------------------------------------------------->
         <div class="white">
             <div class="col s12 m12 l12 center white">
