--- a/opm/templates/home/doctorBody.html
+++ b/opm/templates/home/doctorBody.html
@@ -2,24 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
-<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
-    <script src="https://www.amcharts.com/lib/3/serial.js"></script>
-    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-    <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <style>
-#chartdiv {
-	width	: 100%;
-	height	: 300px;
-}
-#chartdiv2 {
-	width	: 100%;
-	height	: 300px;
-}
-
-</style>
+    <title>OPMS</title>
 
     <div class="row white">
 
