--- a/opm/templates/notifications/notifications.html
+++ b/opm/templates/notifications/notifications.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
+    <title> OPMS - Notifications </title>
 <div class="col s12 m12 l12  white">
 
             <div class="row center">
