--- a/opm/templates/restrictuseraccess/restrictUserAccess.html
+++ b/opm/templates/restrictuseraccess/restrictUserAccess.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block content %}
+    <title> OPMS - Restrict User Access </title>
         <!------------------------------------------------------- BODY STARTS HERE ------------------------------------------------------------->
     <div class="col s12 m12 l12  white">
 
@@ -20,24 +21,62 @@
 
 
             <div class = "row">
-                <form method="post">
                 <div class="col s3 white"></div>
                 <div class="col s6 white left">
                         <h5><B>Doctor</B> can:</h5>
-                        <p><label><input type="checkbox" class="filled-in" checked="checked" /><span>View Medical Information</span></label></p>
-                        <p><label><input type="checkbox" class="filled-in" checked="checked" /><span>View Historical Records</span></label></p>
+                        {% if patient.restrictmedicalinformationaccess == 0 %}
+                            <p><label><input id="medicalInformation" type="checkbox" class="filled-in" checked="checked" /><span>View Medical Information</span></label></p>
+                        {% else %}
+                            <p><label><input id="medicalInformation" type="checkbox" class="filled-in" /><span>View Medical Information</span></label></p>
+                        {% endif %}
+
+                        {% if patient.restrictvitalsinformationaccess == 0 %}
+                            <p><label><input id="vitalRecords" type="checkbox" class="filled-in" checked="checked" /><span>View Historical Vital Records</span></label></p>
+                        {% else %}
+                            <p><label><input id="vitalRecords" type="checkbox" class="filled-in" /><span>View Historical Vital Records</span></label></p>
+                        {% endif %}
 
                 </div>
                 <div class="col s3 white"></div>
                 <div class="col s12 white">
                     <div class="row center">
-                    <button class="btn btn-large waves-effect red lighten-2 center" type="submit">Save</button>
+                    <button id="saveButton" class="btn btn-large waves-effect red lighten-2 center" type="submit">Save</button>
                     </div>
                 </div>
-                </form>
             </div>
     </div>
 
+<script>
+    $("#saveButton").click(function() {
+        var medicalInformation = -1;
+        var vitalRecords = -1;
+        if($("#medicalInformation").is(':checked'))
+            medicalInformation = 0;
+        else
+            medicalInformation = 1;
 
+        if($("#vitalRecords").is(':checked'))
+            vitalRecords = 0;
+        else
+            vitalRecords = 1;
+
+        $.ajax({
+        url: '{% url 'update_patient_restrictions' %}',
+        data: {
+          'patient_id': {{ patient.patientid }},
+          'medicalInformation': medicalInformation,
+          'vitalRecords': vitalRecords,
+        },
+        dataType: 'json',
+        success: function (data) {
+            alert(data[0].response);
+            location.reload();
+
+        }
+
+        });
+
+    });
+</script>
 
 {% endblock %}
